--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
               <div class="owl-carousel owl-carousel-gallery owl-theme owl-loaded">
                 <div class="owl-stage-outer">
                   <div class="owl-stage">
-                    <div class="owl-item"><img src="/assets/gallery/1.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img src="/assets/gallery/2.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img src="/assets/gallery/3.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/1.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/2.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/3.jpg" alt="" srcset="" /></div>
                   </div>
                 </div>
                 <div class="owl-gav">
-                  <div class="customPrevBtn" style="transform: rotate(180deg); margin-right: 1rem"><img src="/assets/arrow.svg" alt="" srcset="" /></div>
-                  <div class="customNextBtn"><img src="/assets/arrow.svg" alt="" srcset="" /></div>
+                  <div class="customPrevBtn" style="transform: rotate(180deg); margin-right: 1rem"><img src="./assets/arrow.svg" alt="" srcset="" /></div>
+                  <div class="customNextBtn"><img src="./assets/arrow.svg" alt="" srcset="" /></div>
                 </div>
               </div>
             </div>
@@ -82,11 +82,11 @@
                 <div class="metre">250 м<span class="sup">2</span></div>
               </h3>
               <ul>
-                <li><img src="/assets/ok.svg" alt="advantages" />6 беговых дорожек</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />1 эллипсоидный тренажер</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />3 велотренажера</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Блочные тренажеры (32 единицы оборудования)</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Зона свободных весов (1500 кг в блинах, гантельный ряд до 50кг, профессиональные грифы)</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />6 беговых дорожек</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />1 эллипсоидный тренажер</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />3 велотренажера</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Блочные тренажеры (32 единицы оборудования)</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Зона свободных весов (1500 кг в блинах, гантельный ряд до 50кг, профессиональные грифы)</li>
               </ul>
             </div>
             <div class="advantages-list-item">
@@ -95,12 +95,12 @@
                 <div class="metre">100 м<span class="sup">2</span></div>
               </h3>
               <ul>
-                <li><img src="/assets/ok.svg" alt="advantages" />4 профессиональны пилона Pol4You</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />4 подвеса для полотен, обручей</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Степ платформы</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Коврики для фитнеса</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Фитболы</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Батуты</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />4 профессиональны пилона Pol4You</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />4 подвеса для полотен, обручей</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Степ платформы</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Коврики для фитнеса</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Фитболы</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Батуты</li>
               </ul>
             </div>
             <div class="advantages-list-item">
@@ -109,13 +109,13 @@
                 <div class="metre">36 м<span class="sup">2</span></div>
               </h3>
               <ul>
-                <li><img src="/assets/ok.svg" alt="advantages" />3 стола для Армрестлинга</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Мешки</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Лапы и перчатки</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Скакалки</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Канаты</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Бодибары</li>
-                <li><img src="/assets/ok.svg" alt="advantages" />Рукоятки для армлифтинга</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />3 стола для Армрестлинга</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Мешки</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Лапы и перчатки</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Скакалки</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Канаты</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Бодибары</li>
+                <li><img src="./assets/ok.svg" alt="advantages" />Рукоятки для армлифтинга</li>
               </ul>
             </div>
           </div>
@@ -140,11 +140,11 @@
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/asyncText.js"></script>
+    <script src="./js/asyncText.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script src="/js/owl.carousel.min.js"></script>
-    <script src="/js/carousel.js"></script>
-    <script src="/js/renderTrainers.js"></script>
+    <script src="./js/owl.carousel.min.js"></script>
+    <script src="./js/carousel.js"></script>
+    <script src="./js/renderTrainers.js"></script>
     <script type="module" src="/js/renderPrices.js"></script>
   </body>
 </html>
