--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/carousel.js"></script>
     <script src="./js/renderTrainers.js"></script>
-    <script type="module" src="/js/renderPrices.js"></script>
+    <script type="module" src="./js/renderPrices.js"></script>
   </body>
 </html>
