--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                     <div class="owl-item"><img src="./assets/gallery/1.jpg" alt="" srcset="" /></div>
                     <div class="owl-item"><img src="./assets/gallery/2.jpg" alt="" srcset="" /></div>
                     <div class="owl-item"><img src="./assets/gallery/3.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/4.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/5.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/6.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/7.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/8.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/9.jpg" alt="" srcset="" /></div>
+                    <div class="owl-item"><img src="./assets/gallery/0.jpg" alt="" srcset="" /></div>
                   </div>
                 </div>
                 <div class="owl-gav">
