--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="asyncText"></div>
           <a class="cbtn" href="tel:79687338393" style="font-size: 1.5rem"
             >+7 (968) 733-83-93
-            <p style="margin: 0; padding: 0; color: inherit">Работаем с 10:00 до 23:00</p>
+            <p style="margin: 0; padding: 0; color: inherit">Открыты с 08:00 до 23:00</p>
           </a>
         </div>
       </div>
