--- a/index.html
+++ b/index.html
@@ -39,127 +39,129 @@
       </div>
     </div>
     <div class="layout">
-      <main>
-        <div class="about">
-          <div class="row justify-content-between">
-            <div class="col-md-5">
-              <h2>О клубе</h2>
-              <p>Спортивная фигура располагает к Вам людей; безупречное здоровье позволяет жить полной и активной жизнью; участие и победы в соревнованиях поднимают вашу самооценку и придают уверенности в себе!</p>
-              <p>
-                Тренажерный зал «ЖЕЛЕЗО» рад приветствовать каждого, кто ценит свое здоровье, свою красоту и свое время. Идеальная физическая форма – показатель качества вашей жизни. Настало время прислушаться к собственному организму,
-                привести в порядок мышцы, избавиться от лишнего веса, стать стройным, подтянутым, а главное – здоровым.
-              </p>
-              <!-- <p>
+      <div class="about section">
+        <div class="row justify-content-between">
+          <div class="col-lg-5">
+            <h2>О клубе</h2>
+            <p>Спортивная фигура располагает к Вам людей; безупречное здоровье позволяет жить полной и активной жизнью; участие и победы в соревнованиях поднимают вашу самооценку и придают уверенности в себе!</p>
+            <p>
+              Тренажерный зал «ЖЕЛЕЗО» рад приветствовать каждого, кто ценит свое здоровье, свою красоту и свое время. Идеальная физическая форма – показатель качества вашей жизни. Настало время прислушаться к собственному организму,
+              привести в порядок мышцы, избавиться от лишнего веса, стать стройным, подтянутым, а главное – здоровым.
+            </p>
+            <!-- <p>
               Спорт – это дорога в счастливую, успешную жизнь. Это уникальная возможность яркими красками раскрасить серые будни, получить массу позитивных эмоций и наконец-то начать гордиться собой! Оборудование в нашем тренажерном зале
               позволяет заниматься как начинающим любителям, так и выступающим спортсменам уровня Про! Здесь Вы всегда найдете живое общение, почерпнёте новые знания, приобщитесь к спорту и при желании сможете подготовиться к
               соревнованиям, выступить, а быть может даже и победить, ведь каждый чемпион когда-то впервые перешагнул порог зала!
             </p> -->
-            </div>
-            <div class="gallery col-md-7">
-              <div class="owl-carousel owl-carousel-gallery owl-theme owl-loaded">
-                <div class="owl-stage-outer">
-                  <div class="owl-stage">
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/1.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/2.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/3.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/4.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/5.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/6.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/7.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/8.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/9.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/10.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/11.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/12.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/13.jpg" alt="" srcset="" /></div>
-                    <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/0.jpg" alt="" srcset="" /></div>
-                  </div>
+          </div>
+          <div class="gallery col-lg-7">
+            <div class="owl-carousel owl-carousel-gallery owl-theme owl-loaded">
+              <div class="owl-stage-outer">
+                <div class="owl-stage">
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/1.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/2.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/3.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/4.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/5.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/6.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/7.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/8.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/9.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/10.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/11.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/12.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/13.jpg" alt="" srcset="" /></div>
+                  <div class="owl-item"><img class="owl-lazy" data-src="./assets/gallery/0.jpg" alt="" srcset="" /></div>
                 </div>
-                <div class="owl-gav">
-                  <div class="customPrevBtn" style="transform: rotate(180deg); margin-right: 1rem"><img src="./assets/arrow.svg" alt="" srcset="" /></div>
-                  <div class="customNextBtn"><img src="./assets/arrow.svg" alt="" srcset="" /></div>
-                </div>
+              </div>
+              <div class="owl-gav">
+                <div class="customPrevBtn" style="transform: rotate(180deg); margin-right: 1rem"><img src="./assets/arrow.svg" alt="" srcset="" /></div>
+                <div class="customNextBtn"><img src="./assets/arrow.svg" alt="" srcset="" /></div>
               </div>
             </div>
           </div>
         </div>
-        <div class="advantages">
-          <!-- <h2>Наши преимущества</h2> -->
-          <div class="advantages-list">
-            <div class="advantages-list-item">
-              <h3>
-                Тренажерный зал
-                <div class="metre">250 м<span class="sup">2</span></div>
-              </h3>
-              <ul>
-                <li><img src="./assets/ok.svg" alt="advantages" />6 беговых дорожек</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />1 эллипсоидный тренажер</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />3 велотренажера</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Блочные тренажеры (32 единицы оборудования)</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Зона свободных весов (1500 кг в блинах, гантельный ряд до 50кг, профессиональные грифы)</li>
-              </ul>
-            </div>
-            <div class="advantages-list-item">
-              <h3>
-                Зал групповых занятий
-                <div class="metre">100 м<span class="sup">2</span></div>
-              </h3>
-              <ul>
-                <li><img src="./assets/ok.svg" alt="advantages" />4 профессиональны пилона Pol4You</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />4 подвеса для полотен, обручей</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Степ платформы</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Коврики для фитнеса</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Фитболы</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Батуты</li>
-              </ul>
-            </div>
-            <div class="advantages-list-item">
-              <h3>
-                Зона единоборств
-                <div class="metre">36 м<span class="sup">2</span></div>
-              </h3>
-              <ul>
-                <li><img src="./assets/ok.svg" alt="advantages" />3 стола для Армрестлинга</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Мешки</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Лапы и перчатки</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Скакалки</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Канаты</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Бодибары</li>
-                <li><img src="./assets/ok.svg" alt="advantages" />Рукоятки для армлифтинга</li>
-              </ul>
-            </div>
+      </div>
+      <div class="advantages section">
+        <!-- <h2>Наши преимущества</h2> -->
+        <div class="advantages-list">
+          <div class="advantages-list-item">
+            <h3>
+              Тренажерный зал
+              <div class="metre">250 м<span class="sup">2</span></div>
+            </h3>
+            <ul>
+              <li><img src="./assets/ok.svg" alt="advantages" />6 беговых дорожек</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />1 эллипсоидный тренажер</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />3 велотренажера</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Блочные тренажеры (32 единицы оборудования)</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Зона свободных весов (1500 кг в блинах, гантельный ряд до 50кг, профессиональные грифы)</li>
+            </ul>
+          </div>
+          <div class="advantages-list-item">
+            <h3>
+              Зал групповых занятий
+              <div class="metre">100 м<span class="sup">2</span></div>
+            </h3>
+            <ul>
+              <li><img src="./assets/ok.svg" alt="advantages" />4 профессиональны пилона Pol4You</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />4 подвеса для полотен, обручей</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Степ платформы</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Коврики для фитнеса</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Фитболы</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Батуты</li>
+            </ul>
+          </div>
+          <div class="advantages-list-item">
+            <h3>
+              Зона единоборств
+              <div class="metre">36 м<span class="sup">2</span></div>
+            </h3>
+            <ul>
+              <li><img src="./assets/ok.svg" alt="advantages" />3 стола для Армрестлинга</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Мешки</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Лапы и перчатки</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Скакалки</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Канаты</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Бодибары</li>
+              <li><img src="./assets/ok.svg" alt="advantages" />Рукоятки для армлифтинга</li>
+            </ul>
           </div>
         </div>
-        <div class="price">
-          <h2>Клубные карты</h2>
-          <div class="owl-carousel owl-carousel-unlimited owl-theme owl-loaded">
-            <div class="owl-stage-outer">
-              <div class="owl-stage prices-unlimited"></div>
-            </div>
-          </div>
-          <div class="owl-carousel owl-carousel-daytime owl-theme owl-loaded">
-            <div class="owl-stage-outer">
-              <div class="owl-stage prices-daytime"></div>
-            </div>
-          </div>
-          <div class="owl-carousel owl-carousel-childlike owl-theme owl-loaded">
-            <div class="owl-stage-outer">
-              <div class="owl-stage prices-childlike"></div>
-            </div>
+      </div>
+      <div class="price section">
+        <h2>Клубные карты</h2>
+        <div class="owl-carousel owl-carousel-unlimited owl-theme owl-loaded">
+          <div class="owl-stage-outer">
+            <div class="owl-stage prices-unlimited"></div>
           </div>
         </div>
-        <div class="individual">
-          <div class="row">
-            <div class="col-md-6">
-              <h2>Тренировки</h2>
-              <div class="accordion" id="accordion"></div>
-            </div>
-            <div class="col-md-6 circle-gradient"><img class="trainer-img" src="./assets/trainers/Sergey.jpg" alt="" srcset="" /></div>
+        <div class="owl-carousel owl-carousel-daytime owl-theme owl-loaded">
+          <div class="owl-stage-outer">
+            <div class="owl-stage prices-daytime"></div>
           </div>
         </div>
-      </main>
+        <div class="owl-carousel owl-carousel-childlike owl-theme owl-loaded">
+          <div class="owl-stage-outer">
+            <div class="owl-stage prices-childlike"></div>
+          </div>
+        </div>
+      </div>
+      <div class="trainers section">
+        <h2>Тренерский состав</h2>
+        <div class="trainers-list"></div>
+      </div>
+      <div class="individual section">
+        <div class="row">
+          <div class="col-md-6">
+            <h2>Тренировки</h2>
+            <div class="accordion" id="accordion"></div>
+          </div>
+          <div class="col-md-6 circle-gradient"><img class="trainer-img" src="./assets/trainers/Sergey.jpg" alt="" srcset="" /></div>
+        </div>
+      </div>
       <footer>
-        <div class="contacts">
+        <div class="contacts section">
           <h2>Контакты</h2>
         </div>
       </footer>
@@ -170,6 +172,7 @@
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/carousel.js"></script>
     <script type="module" src="./js/renderPrices.js"></script>
+    <script type="module" src="./js/renderTrainers.js"></script>
     <script type="module" src="./js/renderTraining.js"></script>
   </body>
 </html>
